--- a/style.css
+++ b/style.css
@@ -54,14 +54,14 @@ body::-webkit-scrollbar-thumb {
 	background-image: linear-gradient(#F90000, #B6D515);
 	-webkit-text-fill-color: transparent;
 	-webkit-background-clip: text;
-	left: 14.5%;
-	top:6.5%;
+	left: 200px;
+	top:6%;
 }
 
 #title {
 	font-family: adlibitum;
 	font-size: 57px;
-	top: 12%;
+	top: 10%;
 	left: 5%;
 	position: absolute;
 	background-image: linear-gradient(#F90000, #B6D515);
@@ -70,8 +70,8 @@ body::-webkit-scrollbar-thumb {
 }
 
 #content {
-	width: 600px;
-	font-size: 18px;
+	width: 700px;
+	font-size: 20px;
 	position: absolute;
 	left: 50%;
 	transform: translate(-50%);
@@ -86,10 +86,10 @@ body::-webkit-scrollbar-thumb {
   width: 100%;
   height: 350px;
   position: absolute;
-  top: 1100px;
+  top: 1400px;
   left 0px;
   z-index: 999;
-  font-size: 20px;
+  font-size: 22px;
   font-family: mono;
   background-image: linear-gradient(#F90000, #B6D515);
   -webkit-text-fill-color: transparent;
